# issueclaw

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  install.sh  pyproject.toml
.claude/: settings.json
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  dependabot-auto-merge.yml  push.yml  queue-sweep.yml  sync.yml  webhook.yml
docs/: ARCHITECTURE.md  INSTALL.md  MARKDOWN_FORMAT.md  QUALITY.md  REFERENCE_FULL.md  SYNC_PROTOCOL.md  USAGE.md  WHY_ISSUECLAW.md  WORKFLOW_LIFECYCLE.md
docs/plans/: 2026-03-09-issueclaw-implementation.md
src/issueclaw/: SKILL.md  diff.py  image_sync.py  linear_client.py  main.py  models.py  parse.py  paths.py  render.py  sync_state.py  workflow_templates.py
src/issueclaw/commands/: apply_webhook.py  create.py  diff_cmd.py  guard.py  init.py  pull.py  push.py  self_cmd.py  status.py  workflows_cmd.py
src/issueclaw/workflows/: issueclaw-push.yaml  issueclaw-queue-sweep.yaml  issueclaw-sync.yaml  issueclaw-webhook.yaml
tests/: test_apply_webhook.py  test_comment_push_invariants.py  test_create_document_resilience.py  test_diff.py  test_diff_command.py  test_guard.py  test_image_sync.py  test_incremental_pull_smoke.py  test_incremental_sync.py  test_init.py  test_initial_sync.py  test_linear_client.py  test_main.py  test_models.py  test_parse.py  test_paths.py  test_push.py  test_render.py  test_status.py  test_sync_state.py  test_workflow_template_invariants.py  test_workflows_cmd.py
workers/issueclaw-webhook-proxy/: worker.js  wrangler.toml
workflows/: issueclaw-pull.yaml  issueclaw-push.yaml  issueclaw-webhook.yaml
